--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
     box sizing: border-box;
 }
     body {
-        font-family: sans;
+        font-family: 'Love Light', cursive;
         margin: 0;
         display: flex;
         flex-direction: column;
@@ -62,3 +62,5 @@
         color: var(--secondary);
         
     }
+
+    
