CSS styling and homepage disclaimer

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <ol class="pet-list">
-  {{#each posts as |post|}}
-  <li>
-    {{> post-info post }}
-  </li>
-  {{/each}}
+  
+  <div>
+    <p>We are not vets, dont listen to us</p>
+  </div>
+  
 </ol>
