--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,66 +1,64 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
-    /* --primary-color: DARKMODE CHARCOL;
-    --secondary-color: BOX/ ELEMENT COLOR; */
-    --tertiary-color: (114, 216, 242);
-
-*{
-    box sizing: border-box;
+  --primary-color: (127, 127, 127);
+  --secondary-color: white;
+  --tertiary-color: (114, 216, 242);
 }
-    body {
-        font-family: 'Love Light', cursive;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        justify-content: flex-start;
-        background-color: var(--quatrianry);
-    }
-    a {
-        color: var (--dark);
-        text-decoration: none;
 
-    }
-    /* a: vistied (
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  /* min-height: 100vh; */
+  justify-content: flex-start;
+  background-color: var(--primary-color);
+}
+
+/* a {
+  color: var(--secondary-color);
+  text-decoration: none;
+} */
+/* a: vistied (
         color: inherit; */
+
+header {
+  padding: 40px;
+  text-align: center;
+  background: var(--primary);
+  color: var(--dark);
 }
 
-    header {
-        padding: 40px;
-        text-aling: center;
-        background: var(--primary);
-        color: var(--dark);
+h1 {
+  font-family: 'Love Light', cursive;
+  color: var(--tertiary-color);
+}
 
-    } 
-    main {
-        display: flex;
-        flex-wrap: wrap;
-        flex-grow: 1;
+main {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+/* aside {
+  flex: o;
+  background-color: var(--tertiary);
+  padding: 80px;
+  text-align: left;
+  color: var(--light);
+}
+nav {
+  display: flex;
+  background-color: var(--dark);
+}
 
-    }
-    aside {
-        flex: o;
-        background-color: var(--tertiary);
-        padding: 80px;
-        text-aling: left;
-        color: var(--light);
-
-    }
-    nav {
-        display: flex;
-        background-color: var(--dark);
-
-    }
-
-    nav a {
-        color: var(--medium);
-        padding: 14px 20px;
-        text-decoration: none;
-        tex-aling: center;
-
-    }
-    nav a:hover {
-        color: var(--secondary);
-        
-    }
-
-    
+nav a {
+  color: var(--medium);
+  padding: 14px 20px;
+  text-decoration: none;
+  text-align: center;
+}
+nav a:hover {
+  color: var(--secondary);
+} */
