--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="/">PetSnack</a>
+          <a href="/">Petsnack</a>
         </h1>
         <nav>
           {{#if loggedIn}}
