--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,20 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Petsnack</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Love+Light&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Love+Light&family=Luxurious+Roman&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="wrapper">
       <header>
         <h1>
-          <a href="/">PetSnack</a>
+          <a href="/">Petsnack</a>
         </h1>
         <nav>
           {{#if loggedIn}}
@@ -33,7 +29,7 @@
         {{{body}}}
       </main>
       <footer>
-        Thanks for visiting Petsnack
+        Thanks for visiting Petsnack!
       </footer>
     </div>
 
