--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 :root {
     --primary: #474343;
     --secondary: #444950;
@@ -11,7 +10,7 @@
   }
 
   body {
-      font-family: 'Luxurious Roman', cursive;
+      font-family: 'Roboto';
       margin: 0;
       display: flex;
       flex-direction: column;
@@ -82,7 +81,7 @@
       margin-left: 16px;
   }
 
-  img {
+img {
       max-width: 100%;
       height: auto;
   }
@@ -135,7 +134,7 @@
 
   /*foote =*/
 footer {
-    background-color: #5c6366;
+    background-color: #484f52;
     font-family: 'Love Light', cursive;
     margin: 0;
     color: #2ae0da;
@@ -143,69 +142,3 @@ footer {
 
   }
   
-=======
-* {
-  box-sizing: border-box;
-}
-
-:root {
-  --primary-color: (127, 127, 127);
-  --secondary-color: white;
-  --tertiary-color: (114, 216, 242);
-}
-
-body {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  /* min-height: 100vh; */
-  justify-content: flex-start;
-  background-color: var(--primary-color);
-}
-
-/* a {
-  color: var(--secondary-color);
-  text-decoration: none;
-} */
-/* a: vistied (
-        color: inherit; */
-
-header {
-  padding: 40px;
-  text-align: center;
-  background: var(--primary);
-  color: var(--dark);
-}
-
-h1 {
-  font-family: 'Love Light', cursive;
-  color: var(--tertiary-color);
-}
-
-main {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-}
-/* aside {
-  flex: o;
-  background-color: var(--tertiary);
-  padding: 80px;
-  text-align: left;
-  color: var(--light);
-}
-nav {
-  display: flex;
-  background-color: var(--dark);
-}
-
-nav a {
-  color: var(--medium);
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
-}
-nav a:hover {
-  color: var(--secondary);
-} */
->>>>>>> 762a0192f3abdea45a6d4b877136e29487063502
