--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Petsnack</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Love+Light&display=swap" rel="stylesheet">
-    />
+    {{!-- {{#each css}} --}}
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Love+Light&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    {{!-- {{/each}} --}}
   </head>
 
-  <body>
+
+        {{{body}}}
     <div class="wrapper">
       <header>
         <h1>
@@ -18,7 +23,7 @@
         </h1>
         <nav>
           {{#if loggedIn}}
-            <a href="/dashboard">dashboard</a>
+            <a href="/homepage">homepage</a>
             <button id="logout" class="btn-no-style">logout</button>
           {{else}}
             <a href="/login">login</a>
@@ -26,9 +31,11 @@
         </nav>
       </header>
       <main>
-        {{{body}}}
       </main>
       <footer>
+        <span class="material-icons-two-tone">
+         pets
+       </span>
         Thanks for visiting Petsnack!
       </footer>
     </div>
@@ -37,5 +44,4 @@
       <script src="/javascript/logout.js"></script>
     {{/if}}
   </body>
-
-</html>
+</html>   
