--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,11 @@
 <ol class="pet-list">
-<<<<<<< HEAD
   {{#each posts as |post|}}
   <li>
     {{> post-info post }}
 </li>
-<p> This website is only for fun, we are not Veteraians!!!</p>
+<p> This website is only for fun, we are not Veteinarians!!!
+Fun only no Verterniarians are giving advice...
+Please see your Real vet for real advice...
+</p>
   {{/each}}
-=======
-  
-  <div>
-    <p>We are not vets, dont listen to us...</p>
-  </div>
-  
->>>>>>> 762a0192f3abdea45a6d4b877136e29487063502
 </ol>
