finished and seeded post, comment, and vote models; also AWS image integration

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,7 @@
         {{#each pets as |post|}}
         <li>
             {{>pets-info post}}
-            <a href="/dshboard/edit{{pets.id}}" class="edit-link">Edit pets</a>
+            <a href="/dashboard/edit{{pets.id}}" class="edit-link">Edit pets</a>
         </li>
         {{/each}}
     </ol>
