--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Love+Light&display=swap" rel="stylesheet">
-    />
   </head>
 
   <body>
@@ -36,6 +35,11 @@
     {{#if loggedIn}}
       <script src="/javascript/logout.js"></script>
     {{/if}}
+
+
+
+
+    <script src="/javascript/image.js"></script>
   </body>
 
 </html>
