--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,94 +7,103 @@
     --dark: #1c2c25;
     --error: rgb(228, 46, 1);
     --border-radius: 0.3rem;
-  }
-  
-  body {
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      justify-content: flex-start;
-      background-color: var(--secondary); 
-      font-family: 'Roboto', san-serif; 
-      color: var(--light);
-  }
-  a {
-      color: var(--dark);
-      text-decoration: none;
-  }
-  a:visited {
-      color: inherit;
-  }
+}
 
-  header {
-      padding: 45px;
-      text-align: center;
-      background: var(--primary);
-      font-family: 'Love Light', cursive;
-      font-size: 64px;
-      color: #9ae1e4d8;
-  }
-  main {
-      display: flex;
-      flex-wrap: wrap;
-      flex-grow: 1;
-      font-family: 'Roboto', sans-serif;
-      color: white;
-  }
-  aside {
-      flex: 0;
-      background-color: var(--primary);
-      padding: 80px;
-      text-align: left;
-      color: var(--light);
-  }
-  nav {
-      display: flex;
-      background-color: var(--secondary);
-      font-family: 'Roboto', sans-serif;
-      color: white;
-      font-size: 24px
-  }
-  
-  nav a {
-      color: var(--light);
-      padding: 15px 20px;
-      text-decoration: none;
-      text-align: center;
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: flex-start;
+    background-color: var(--secondary);
+    font-family: 'Roboto', san-serif;
+    color: var(--light);
+}
 
-  }
+a {
+    color: var(--dark);
+    text-decoration: none;
+}
 
-  nav a:hover {
-      color: var(--secondary);
-      background-color: var(--dark);
-  }
-  .gallery {
-      flex: 4;
-      background-color: #6c6b67;
-      padding: 550px;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: center;
-      align-items: center;
-  }
-  .btn-no-style {
-      background: none;
-      border: none;
-      padding: 0;
-      cursor: pointers;
-      text-decoration: none;
-      font-size: 100%;
-      transition: color 0.1s;
-      margin-left: 16px;
-  }
+a:visited {
+    color: inherit;
+}
+
+header {
+    padding: 45px;
+    text-align: center;
+    background: var(--primary);
+    font-family: 'Love Light', cursive;
+    font-size: 64px;
+    color: #9ae1e4d8;
+}
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+aside {
+    flex: 0;
+    background-color: var(--primary);
+    padding: 80px;
+    text-align: left;
+    color: white;
+    font-size: 35px;
+}
+
+nav {
+    display: flex;
+    background-color: var(--secondary);
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 24px
+}
+
+nav a {
+    color: var(--light);
+    padding: 15px 20px;
+    text-decoration: none;
+    text-align: center;
+}
+
+nav a:hover {
+    color: var(--secondary);
+    background-color: var(--dark);
+}
+
+.gallery {
+    flex: 4;
+    background-color: #6c6b67;
+    padding: 550px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-no-style {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointers;
+    text-decoration: none;
+    font-size: 100%;
+    transition: color 0.1s;
+    margin-left: 16px;
+}
 
 img {
-      max-width: 100%;
-      height: auto;
-  }
+    max-width: 100%;
+    height: auto;
+}
+
 
 /* cards*/
+
 .card {
     margin: 20px;
     flex: o 1 300px;
@@ -103,6 +112,7 @@ img {
     background-color: var(--dark);
     color: var(--light);
 }
+
 .login-card {
     margin: 0 0 20px 0;
     flex: 0 0 50%;
@@ -114,9 +124,9 @@ img {
     border-width: thick;
     background-color: #5c6366;
     color: var(--light);
-  }
-  
-  .card header {
+}
+
+.card header {
     color: var(--light);
     font-weight: bold;
     text-transform: uppercase;
@@ -124,30 +134,32 @@ img {
     background-color: var(--tertiary);
     padding: 0.625rem;
     border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
-  }
-  
-  .card-body {
+}
+
+.card-body {
     font-size: 1.4rem;
     text-align: center;
     font-weight: bold;
-  }
-  
-  /* LAYOUT */
+}
+
+
+/* LAYOUT */
+
 .container {
     display: flex;
     flex-flow: column wrap;
     align-content: flex-start;
     align-items: center;
-  }
+}
 
-  /*foote =*/
+
+/*footer =*/
+
 footer {
     background-color: #484f52;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     color: #2ae0da;
     font-size: 15px;
-
-
-  }
-  
+    text-align: center;
+}
