--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,19 +34,19 @@
         <aside>
           <p>This website is only for experience only, we are not veterinarians!
               Please see your real vet for real advice...
-              </p>
+          </p>
         </aside>
       {{{body}}}
-          
+      
       </main>
       <footer>
-        <span class="material-icons-two-tone">
+        {{!-- <span class="material-icons-two-tone">
          pets
-       </span>
+       </span> --}}
         Thanks for visiting Petsnack!
-        <span class="material-icons-two-tone">
+        {{!-- <span class="material-icons-two-tone">
          pets
-       </span>
+       </span> --}}
       </footer>
     </div>
 
