--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,8 +3,8 @@
   <li>
     {{> post-info post }}
   </li>
-    <p> This website is only for experience only, we are not veterinarians!
+    {{!-- <p> This website is only for experience only, we are not veterinarians!
     Please see your real vet for real advice...
-    </p>
+    </p> --}}
     {{/each}}
 </ol>
