--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,8 @@
           {{else}}
             <a href="/login">login</a>
           {{/if}}
+          <a href="/dashboard">Dashboard</a>
+      
         </nav>
       </header>
       <main>
