--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,69 +1,68 @@
 :root {
-    --primary: #474343;
-    --secondary: #444950;
-    --tertiary: #36bbc0;
-    --quatrinary: #6c6b67;
-    --light: #e3e4e3;
-    --dark: #1c2c25;
-    --error: rgb(228, 46, 1);
-    --border-radius: 0.3rem;
-  }
-  
-  body {
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      justify-content: flex-start;
-      background-color: var(--secondary); 
-      font-family: 'Roboto', san-serif; 
-      color: var(--light);
-  }
-  a {
-      color: var(--dark);
-      text-decoration: none;
-  }
-  a:visited {
-      color: inherit;
-  }
+  --primary: #474343;
+  --secondary: #444950;
+  --tertiary: #36bbc0;
+  --quatrinary: #6c6b67;
+  --light: #e3e4e3;
+  --dark: #1c2c25;
+  --error: rgb(228, 46, 1);
+  --border-radius: 0.3rem;
+}
 
-  header {
-      padding: 45px;
-      text-align: center;
-      background: var(--primary);
-      font-family: 'Love Light', cursive;
-      font-size: 64px;
-      color: #9ae1e4d8;
-  }
-  main {
-      display: flex;
-      flex-wrap: wrap;
-      flex-grow: 1;
-      font-family: 'Roboto', sans-serif;
-      color: white;
-  }
-  aside {
-      flex: 0;
-      background-color: var(--primary);
-      padding: 80px;
-      text-align: left;
-      color: var(--light);
-  }
-  nav {
-      display: flex;
-      background-color: var(--secondary);
-      font-family: 'Roboto', sans-serif;
-      color: white;
-      font-size: 24px
-  }
-  
-  nav a {
-      color: var(--light);
-      padding: 15px 20px;
-      text-decoration: none;
-      text-align: center;
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: flex-start;
+  background-color: var(--secondary);
+  font-family: "Roboto", san-serif;
+  color: var(--light);
+}
+a {
+  color: var(--dark);
+  text-decoration: none;
+}
+a:visited {
+  color: inherit;
+}
 
-  }
+header {
+  padding: 45px;
+  text-align: center;
+  background: var(--primary);
+  font-family: "Love Light", cursive;
+  font-size: 64px;
+  color: #9ae1e4d8;
+}
+main {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  font-family: "Roboto", sans-serif;
+  color: white;
+}
+aside {
+  flex: 0;
+  background-color: var(--primary);
+  padding: 80px;
+  text-align: left;
+  color: var(--light);
+}
+nav {
+  display: flex;
+  background-color: var(--secondary);
+  font-family: "Roboto", sans-serif;
+  color: white;
+  font-size: 24px;
+}
+
+nav a {
+  color: var(--light);
+  padding: 15px 20px;
+  text-decoration: none;
+  text-align: center;
+}
 
 nav a:hover {
   color: var(--secondary);
@@ -142,12 +141,12 @@ img {
 
 /*foote =*/
 footer {
-    background-color: #484f52;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    color: #2ae0da;
-    font-size: 15px;
-
+  background-color: #484f52;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  color: #2ae0da;
+  font-size: 15px;
+}
 /* image upload styling*/
 form {
   display: flex;
