--- a/views/partials/petpost.handlebars
+++ b/views/partials/petpost.handlebars
@@ -6,4 +6,13 @@
         </div>
     </a>
     <p>{{ content }}</p>
-</div>>
+</div>
+
+<section class="card">
+    <a href="/dahsboard/{{id}}">
+    <header>{{post}}</header>
+    <div class="card-body">
+    
+    </div>
+    </a>
+</section>
