--- a/views/partials/petpost.handlebars
+++ b/views/partials/petpost.handlebars
@@ -9,14 +9,37 @@
 </div>
 
 <section class="card">
-<<<<<<< HEAD
-    <a href="/dahsboard/{{id}}">
-=======
     <a href="/dashboard/{{id}}">
->>>>>>> main
     <header>{{post}}</header>
-    <div class="card-body">
-    
+<div class="card-body">
+    <ul>
+        <li>
+            {{petName}}
+        </li>
+        <li>
+            {{petImage}}
+        </li>
+        <li>
+            {{petSpecies}}
+        </li>
+        <li>
+            {{petBreed}}
+        </li>
+        <li>
+            {{petWeight}}
+        </li>
+        <li>
+            {{userName}}
+        </li>
+    </ul>
+
+
     </div>
     </a>
-</section>
+</section>pet_name: 'Nik',
+    pet_image: null,
+    species: 'Cat',
+    breed: 'Siamese',
+    weight: 13,
+    user_id: 6,
+  },
